Add extra files

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,4 +17,5 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           goos: linux
           goarch: amd64
+          extra_files: LICENSE README.md
 
